Fixed return to main page

--- a/recipes/hamstercake.html
+++ b/recipes/hamstercake.html
@@ -16,5 +16,5 @@
         <li>Bake in oven for 5 mins at 180 degrees celsius.</li>
         <li>Garnish with fruits and soul of a small spider.</li>
     </ol>
-    <a href="index.html">Return to Main Page</a>
+    <a href="../index.html">Return to Main Page</a>
 </html>
