Added new page for hamsterjuice

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <h1>Odin Recipes</h1>
     <a href="recipes/hamstercake.html">Hamster's 1st Birthday Cake</a>
+    <a href="recipes/hamsterjuice.html">Hamster's Favourite Juice</a>
 </html>
