--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <h1>Odin Recipes</h1>
-    <a href="recipes/hamstercake.html">Hamster's 1st Birthday Cake</a>
-    <a href="recipes/hamsterjuice.html">Hamster's Favourite Juice</a>
+    <ol>
+        <li><a href="recipes/hamstercake.html">Hamster's 1st Birthday Cake</a></li>
+        <li><a href="recipes/hamsterjuice.html">Hamster's Favourite Juice</a></li>
+    </ol>
 </html>
