--- a/recipes/hamsterjuice.html
+++ b/recipes/hamsterjuice.html
@@ -1,5 +1,5 @@
 <html>
-    <h1>Hamster's Favourite Juice/h1>
+    <h1>Hamster's Favourite Juice</h1>
     <img src="hamsterjuice.jpeg">
     <h2>Description</h2>
     <p>How to make hamster's favourite juice. This recipe is my hamster's (Peso) favourite drink.</p>
