--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <h1>Odin Recipes</h1>
+    <img src="hamsterchef.png" alt="image of hamster chef">
     <ol>
-        <li><a href="recipes/hamstercake.html">Hamster's 1st Birthday Cake</a></li>
-        <li><a href="recipes/hamsterjuice.html">Hamster's Favourite Juice</a></li>
+        <li><a href="recipes/hamstercake.html">Hamster's 1st Birthday Cake</a></li><br>
+        <li><a href="recipes/hamsterjuice.html">Hamster's Favourite Juice</a></li><br>
+        <li><a href="recipes/hamstersnack.html">Hamster's After-school Snack!</a></li><br>
     </ol>
 </html>
